<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExampleActivity"
    android:id="@+id/screenlayout">

    <EditText
        android:id="@+id/edusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/edphonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/edmessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_message"
        android:layout_margin="16dp"/>

    <RadioGroup
        android:id="@+id/genderbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <RadioButton
            android:id="@+id/maleoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>

        <RadioButton
            android:id="@+id/femaleoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/smsbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sms"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/callbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/sendbutton"
        android:text="@string/send_activity"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>